--- a/spring-boot-expert-jpa-restful/src/main/resources/application-development.yaml
+++ b/spring-boot-expert-jpa-restful/src/main/resources/application-development.yaml
@@ -17,15 +17,15 @@ spring:
         format_sql: true #https://www.baeldung.com/sql-logging-spring-boot
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none #create-drop - cria e destroi o banco a cada inicializacao
+      ddl-auto: update #create-drop - cria e destroi o banco a cada inicializacao
                      #vamos deixar 'none' pois vamos criar o schema e dados via scripts la em baixo
     defer-datasource-initialization: true #retarda a inicializacao do datasource
   sql:
     init:
         mode: always #always, never, embedded - somente para h2 usa aways
         platform: h2
-        schema-locations: classpath:/schema.sql
-        data-locations: classpath:/data.sql
+        #schema-locations: classpath:/schema_renomeado_para_nao_executar.sql #schema_renomeado_para_nao_executar.sql e data_renomeado_para_nao_executar.sql sao executados sempre que o spring boot inicia
+        #data-locations: classpath:/data_renomeado_para_nao_executar.sql #schema_renomeado_para_nao_executar.sql e data_renomeado_para_nao_executar.sql sao executados sempre que o spring boot inicia
   h2:
     console:
       enabled: true
@@ -51,5 +51,8 @@ server:
 logging:
   level:
     org.springframework.jdbc.core.JdbcTemplate: DEBUG
+    org.springframework.jdbc.core.StatementCreatorUtils: TRACE
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 
