--- a/spring-boot-expert-jpa-restful/Dockerfile
+++ b/spring-boot-expert-jpa-restful/Dockerfile
@@ -10,6 +10,10 @@ WORKDIR /app
 
 COPY target/*.jar /app/app.jar
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["java","-Dspring.profiles.active=production", "-jar", "app.jar"]
+
+#https://tpbabparn.medium.com/spring-boot-3-1-integrated-docker-compose-on-development-environment-spring-webflux-example-1ddcbfe052f
+#https://springhow.com/spring-boot-and-postgres-using-docker-compose/
+
 
 #ENTRYPOINT ["top", "-b"]
