--- a/spring-boot-expert-jpa-restful/src/main/resources/application-development.yaml
+++ b/spring-boot-expert-jpa-restful/src/main/resources/application-development.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: developer-service
+    name: myapp
   datasource:
     url: jdbc:h2:mem:vendas;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
