--- a/spring-boot-expert-jpa-restful/docker-compose.yml
+++ b/spring-boot-expert-jpa-restful/docker-compose.yml
@@ -20,11 +20,18 @@ services:
         - "8080:8080"
     depends_on:
       - db
+      - redis
     environment:
         SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/myapp
         SPRING_DATASOURCE_USERNAME: postgres
         SPRING_DATASOURCE_PASSWORD: postgres@@
         SPRING_JPA_HIBERNATE_DDL_AUTO: update
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+        - "6379:6379"
 
 networks:
   myapp:
