--- a/spring-boot-expert-jpa-restful/src/main/resources/application-development.yaml
+++ b/spring-boot-expert-jpa-restful/src/main/resources/application-development.yaml
@@ -52,12 +52,18 @@ logging:
   level:
     root: INFO
     org.springframework.jdbc.core.JdbcTemplate: INFO
-    org.springframework.jdbc.core.jdbc: DEBUG
+    org.springframework.jdbc.core.jdbc: INFO
     org.springframework.web: INFO
-    org.hibernate: DEBUG
+    org.hibernate: INFO
     org.hibernate.type: INFO
     org.hibernate.stat: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: DEBUG
-    org.hibernate.type.descriptor.sql.BasicExtractor: DEBUG
+    org.hibernate.SQL: INFO
+    org.hibernate.type.descriptor.sql.BasicBinder: INFO
+    org.hibernate.type.descriptor.sql.BasicExtractor: INFO
     org.springframework.cache: TRACE
+
+#Configuracao TTL do cache no Redis classificado por CacheName
+myapp:
+  cache:
+    redis:
+      ttl: 15
