--- a/spring-boot-expert-jpa-restful/src/main/resources/application-production.yaml
+++ b/spring-boot-expert-jpa-restful/src/main/resources/application-production.yaml
@@ -1,4 +1,10 @@
 spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  cache:
+    type: redis
   application:
     name: myapp
   datasource:
@@ -47,3 +53,9 @@ logging:
     org.hibernate.SQL: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: INFO
     org.hibernate.type.descriptor.sql.BasicExtractor: INFO
+
+#Configuracao TTL do cache no Redis classificado por CacheName
+myapp:
+  cache:
+    redis:
+      ttl: 15
