--- a/api-vendas/src/main/resources/application.yaml
+++ b/api-vendas/src/main/resources/application.yaml
@@ -4,4 +4,9 @@ spring:
     default: development
     #default: production
 
+#Configuracoa Banner do Spring
+banner:
+  location: classpath:banner.txt
+  charset: UTF-8
+
 #Por padrao o spring boot usa o HikariCP como pool de conexoes (Bem robusto)
