-Adicionando tutoriais sobre configuracao do ambiente
-Restruturando projeto springboot-expert

--- a/api-vendas/Dockerfile-api-vendas
+++ b/api-vendas/Dockerfile-api-vendas
@@ -4,7 +4,7 @@ RUN apk add --no-cache bash \
     && apk add --no-cache curl \
     && apk add --no-cache iputils
 #development, production
-ARG AMBIENTE=development
 WORKDIR /app
 COPY target/*.jar /app/app.jar
-CMD ["java","-Dspring.profiles.active=$AMBIENTE", "-jar", "app.jar"]
+CMD ["java","-Dspring.profiles.active=production", "-jar", "app.jar"]
+#CMD ["/bin/sh", "-c", "bash"]
