--- a/api-vendas/src/main/resources/application-production.yaml
+++ b/api-vendas/src/main/resources/application-production.yaml
@@ -1,12 +1,13 @@
 spring:
   data:
     redis:
-      host: localhost
-      port: 6379
+      url: redis://${REDIS_HOST}:${REDIS_PORT}
+      #host: ${REDIS_HOST}
+      #port: ${REDIS_PORT}
   cache:
     type: redis
   application:
-    name: myapp
+    name: api-vendas
   datasource:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
@@ -59,3 +60,8 @@ myapp:
   cache:
     redis:
       ttl: 15
+
+#Configuracoa Banner do Spring
+banner:
+  location: classpath:banner.txt
+  charset: UTF-8
