--- a/api-vendas/Dockerfile-api-vendas
+++ b/api-vendas/Dockerfile-api-vendas
@@ -2,7 +2,9 @@ FROM openjdk:17-alpine3.13
 LABEL authors="sebastiaofidencio"
 RUN apk add --no-cache bash \
     && apk add --no-cache curl \
-    && apk add --no-cache iputils
+    && apk add --no-cache iputils \
+    && apk add --no-cache vim \
+    && apk add --no-cache htop
 #development, production
 WORKDIR /app
 COPY target/*.jar /app/app.jar
