--- a/api-vendas/docker/Dockerfile-redis
+++ b/api-vendas/docker/Dockerfile-redis
@@ -3,5 +3,5 @@ LABEL authors="sebastiaofidencio"
 RUN apk add --no-cache bash \
     && apk add --no-cache curl \
     && apk add --no-cache iputils
-COPY redis.conf /usr/local/etc/redis/redis.conf
+COPY ../redis.conf /usr/local/etc/redis/redis.conf
 CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
