-Ajuste README.md
-Finalizado a implementacao mongodb

--- a/api-vendas/pom.xml
+++ b/api-vendas/pom.xml
@@ -87,6 +87,13 @@
             <version>2.2.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
