--- a/api-vendas/src/main/resources/ValidationMessages.properties
+++ b/api-vendas/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,5 @@
 cliente.cpf.invalido=CPF invalido
+cliente.cpf.obrigatorio=CPF obrigatorio
 cliente.email.invalido=Email invalido
-
+cliente.email.obrigatorio=Email obrigatorio
 cliente.nome.obrigatorio=Nome obrigatorio
