--- a/api-vendas/src/main/resources/application-development.yaml
+++ b/api-vendas/src/main/resources/application-development.yaml
@@ -1,5 +1,11 @@
 spring:
   data:
+    mongodb:
+      uri: mongodb://localhost:27017/api-vendas
+      password: mypass
+      #host: localhost
+      #port: 27017
+      #database: api-vendas
     redis:
       url: redis://localhost:6379
       #host: localhost
@@ -55,6 +61,7 @@ logging:
     org.springframework.jdbc.core.JdbcTemplate: INFO
     org.springframework.jdbc.core.jdbc: INFO
     org.springframework.web: INFO
+    org.springframework.data.mongodb.core.MongoTemplate: TRACE
     org.hibernate: INFO
     org.hibernate.type: INFO
     org.hibernate.stat: INFO
