--- a/api-vendas/src/main/resources/application-production.yaml
+++ b/api-vendas/src/main/resources/application-production.yaml
@@ -48,6 +48,7 @@ logging:
     org.springframework.jdbc.core.JdbcTemplate: INFO
     org.springframework.jdbc.core.jdbc: INFO
     org.springframework.web: INFO
+    org.springframework.data.mongodb.core.MongoTemplate: INFO
     org.hibernate: INFO
     org.hibernate.type: INFO
     org.hibernate.stat: INFO
