--- a/api-vendas/docker-compose.yml
+++ b/api-vendas/docker-compose.yml
@@ -50,6 +50,17 @@ services:
     restart: always
     ports:
       - "6379:6379"
+  mongo:
+    image: mongo:latest
+    platform: linux/amd64
+    networks:
+      - api-vendas-network
+    container_name: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db #docker named volumes
 
 networks:
   api-vendas-network:
@@ -61,4 +72,6 @@ networks:
 
 volumes:
   postgres-data:
+    driver: local
+  mongo-data:
     driver: local
