--- a/api-vendas/src/main/resources/application-production.yaml
+++ b/api-vendas/src/main/resources/application-production.yaml
@@ -1,5 +1,11 @@
 spring:
   data:
+    mongodb:
+      uri: mongodb://localhost:27017/api-vendas
+      password: mypass
+      #host: localhost
+      #port: 27017
+      #database: api-vendas
     redis:
       url: redis://${REDIS_HOST}:${REDIS_PORT}
       #host: ${REDIS_HOST}
