--- a/api-vendas/src/main/resources/application-production.yaml
+++ b/api-vendas/src/main/resources/application-production.yaml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/api-vendas
+      uri: mongodb://${MONGO_DB_HOST}:${MONGO_DB_PORT}/api-vendas
       password: mypass
       #host: localhost
       #port: 27017
