-Ajuste README.md
-Implementando AOP e finalizado regex

--- a/api-vendas/src/main/resources/ValidationMessages.properties
+++ b/api-vendas/src/main/resources/ValidationMessages.properties
@@ -3,3 +3,4 @@ cliente.cpf.obrigatorio=CPF obrigatorio
 cliente.email.invalido=Email invalido
 cliente.email.obrigatorio=Email obrigatorio
 cliente.nome.obrigatorio=Nome obrigatorio
+cliente.nome.invalido=Nome invalido [Tem iniciar com letra maiuscula e terminar com ponto final]
