--- a/api-vendas/src/test/resources/application-test.yaml
+++ b/api-vendas/src/test/resources/application-test.yaml
@@ -1,23 +1,10 @@
 spring:
   data:
-    mongodb:
-      uri: mongodb://localhost:27017/api-vendas
-      password: mypass
-      #host: localhost
-      #port: 27017
-      #database: api-vendas
-    redis:
-      url: redis://localhost:6379
-      #host: localhost
-      #port: 6379
-  cache:
-    type: redis
   application:
     name: api-vendas
   datasource:
     #Em memoria vai ser usado para testes
-    #url: jdbc:h2:mem:vendas;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    url: jdbc:h2:file:~/vendas;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: sa
     driverClassName: org.h2.Driver
@@ -28,7 +15,7 @@ spring:
   jpa:
     open-in-view: false #https://vladmihalcea.com/the-open-session-in-view-anti-pattern/
       #Permite que o hibernate mantenha a sessao aberta ate o final da requisicao se 'true'
-      #Para evitar o erro de lazy loading(LazyInitializationException),
+    #Para evitar o erro de lazy loading(LazyInitializationException),
     #Mas pode causar problemas de performance e Relacoes OneToMany e ManyToMany com Fetch LAZY
     show-sql: true
     properties:
@@ -52,34 +39,3 @@ spring:
       settings:
         trace: false
         web-allow-others: false
-server:
-  servlet:
-    context-path: /base
-  port: 8080
-#https://medium.com/@patelsajal2/learn-how-to-enable-logging-of-sql-statements-in-spring-boot-with-this-comprehensive-tutorial-48c06bc080ab
-logging:
-  level:
-    root: INFO
-    org.springframework.jdbc.core.JdbcTemplate: INFO
-    org.springframework.jdbc.core.jdbc: INFO
-    org.springframework.web: INFO
-    org.springframework.data.mongodb.core.MongoTemplate: TRACE
-    org.hibernate: INFO
-    org.hibernate.type: INFO
-    org.hibernate.stat: INFO
-    org.hibernate.SQL: INFO
-    org.hibernate.type.descriptor.sql.BasicBinder: INFO
-    org.hibernate.type.descriptor.sql.BasicExtractor: INFO
-    org.springframework.cache: TRACE
-
-#Configuracao TTL do cache no Redis classificado por CacheName
-myapp:
-  cache:
-    redis:
-      ttl: 15
-
-
-#Configuracoa Banner do Spring
-banner:
-  location: classpath:banner.txt
-  charset: UTF-8
