--- a/api-vendas/src/test/resources/application-test.yaml
+++ b/api-vendas/src/test/resources/application-test.yaml
@@ -1,5 +1,11 @@
 spring:
   data:
+    redis:
+      url: redis://localhost:6379
+      #host: localhost
+      #port: 6379
+    cache:
+      type: redis
   application:
     name: api-vendas
   datasource:
