--- a/api-vendas/src/test/resources/application-test.yaml
+++ b/api-vendas/src/test/resources/application-test.yaml
@@ -5,7 +5,7 @@ spring:
       #host: localhost
       #port: 6379
     cache:
-      type: redis
+      type: none
   application:
     name: api-vendas
   datasource:
