-Andamento nos redis com redis simulado em memoria

--- a/api-vendas/src/test/resources/application-test1.yaml
+++ b/api-vendas/src/test/resources/application-test1.yaml
@@ -1,11 +1,11 @@
 spring:
   data:
     redis:
-      url: redis://localhost:6379
+      url: redis://localhost:6378
       #host: localhost
       #port: 6379
     cache:
-      type: none
+      type: redis
   application:
     name: api-vendas
   datasource:
