--- a/api-vendas/pom.xml
+++ b/api-vendas/pom.xml
@@ -82,9 +82,20 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!--testes de integração com conteiners-->
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.18.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -96,6 +107,18 @@
             <version>0.7.2</version>
             <scope>test</scope>
         </dependency>
+
+
+
+        <!--Dependency tests in rest-assured-->
+        <!--testes de integração real-->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
 
 
         <dependency>
