-Andamento do curso tdd
-Finalizado teste de integracao @DataJpaTest

--- a/api-livros/src/test/resources/application-test.yaml
+++ b/api-livros/src/test/resources/application-test.yaml
@@ -1,9 +1,9 @@
 #configure log
 logging:
   level:
-    root: DEBUG
-    org.springframework.web: DEBUG
-    com.github.sfidencio: TRACE
+    root: INFO
+    #org.springframework.web: DEBUG
+    #com.github.sfidencio: TRACE
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
