--- a/api-livros/src/main/resources/application.yaml
+++ b/api-livros/src/main/resources/application.yaml
@@ -20,8 +20,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
-server:
-  port: 8080
-  servlet:
-    context-path: /api
+#server:
+#  port: 8080
+#  servlet:
+#    context-path: /api
 
