--- a/api-livros/src/test/resources/application-test.yaml
+++ b/api-livros/src/test/resources/application-test.yaml
@@ -2,8 +2,8 @@
 logging:
   level:
     root: INFO
-    #org.springframework.web: DEBUG
-    #com.github.sfidencio: TRACE
+    org.springframework.web: INFO
+    com.github.sfidencio: INFO
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
@@ -13,6 +13,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
