--- a/explorando-padrao-cadeia-responsabilidade/pom.xml
+++ b/explorando-padrao-cadeia-responsabilidade/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.sfidencio</groupId>
-    <artifactId>exploring-solid</artifactId>
+    <artifactId>explorando-padrao-cadeia-responsabilidade</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
